<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.irena.robertkaczmarek.pomocnikpracodawcy.information">

    <TextView
        android:id="@+id/nameAndSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textSize="17sp"
        android:background="@android:color/holo_blue_bright"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/następne_badanie"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="17sp"
        android:background="@android:color/holo_blue_bright"

         />

    <TextView
        android:id="@+id/showNextDoctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="17sp"
        android:background="@android:color/holo_blue_bright"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nast_pne_szkolenie"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="17sp"
        android:background="@android:color/holo_blue_bright"


        />
    <TextView
    android:id="@+id/showNextLern"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_margin="5dp"
    android:textSize="17sp"
    android:background="@android:color/holo_blue_bright"

   />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/umowa_do"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="17sp"
        android:background="@android:color/holo_blue_bright"


        />

    <TextView
        android:id="@+id/showEndOfContract"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="17sp"
        android:background="@android:color/holo_blue_bright"

       />

    <Button
        android:id="@+id/editData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="17sp"
        android:text="Edytuj dane"/>

</LinearLayout>
